--- a/index.html
+++ b/index.html
@@ -475,5 +475,78 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal window with backdrop -->
+    <div class="backdrop">
+      <div class="modal"></div>
+      <!-- <button class="modal-close" type="button">X</button> -->
+      <svg class="icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+      <p class="modal-title title">
+        Leave your contacts and we well call you back
+      </p>
+      <form class="modal-form">
+        <div class="modal-field">
+          <!-- user -->
+          <label for="user-name" class="modal-label">Name</label>
+          <div class="modal-input-wrap">
+            <input
+              type="text"
+              name="user-email"
+              class="modal-input"
+              id="user-email"
+              required
+            />
+            <svg class="modal-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
+
+          <!-- phone -->
+          <label for="user-phone" class="modal-label">Phone</label>
+          <div class="modal-input-wrap">
+            <input
+              type="tel"
+              title="+380 (96) 111-11-11"
+              value="+380"
+              name="user-email"
+              class="modal-input"
+              id="user-phone"
+              required
+            />
+            <svg class="modal-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+
+          <!-- email -->
+          <label class="modal-label" for="user-email">Email</label>
+          <div class="modal-input-wrap">
+            <input
+              type="email"
+              name="user-email"
+              class="modal-input"
+              id="user-email"
+              required
+            />
+            <svg class="modal-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+
+          <!-- comment -->
+          <label class="modal-label" for="user-email">User comment</label>
+          <div class="modal-input-wrap">
+            <textarea
+              name="user-comment"
+              class="modal-input"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
