--- a/index.html
+++ b/index.html
@@ -473,6 +473,18 @@
             </li>
           </ul>
         </div>
+
+        <!-- Subscribe -->
+        <div class="footer-form">
+          <span class="subsribe-text">Subscribe</span>
+          <label for="footer-email">
+            <input type="email" name="footer-email" id="footer-form-id" />
+            <button type="submit" class="footer-form-btn">Subscribe</button>
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-subscribe"></use>
+            </svg>
+          </label>
+        </div>
       </div>
     </footer>
 
