--- a/index.html
+++ b/index.html
@@ -478,11 +478,24 @@
         <div class="footer-form">
           <span class="subsribe-text">Subscribe</span>
           <label for="footer-email">
-            <input type="email" name="footer-email" id="footer-form-id" />
-            <button type="submit" class="footer-form-btn">Subscribe</button>
-            <svg class="icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-subscribe"></use>
-            </svg>
+            <!-- =======  =========-->
+            <input type="email" name="footer-email" class="footer-input" />
+
+            <!-- BUTTON type="button" -->
+            <!-- <button type="button" class="subscribe-button">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+              <span class="subsribe-text">Subscribe</span>
+            </button> -->
+
+            <!-- div (rectangle) -->
+            <div class="subscribe-button">
+              <span class="subsribe-text">Subscribe</span>
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </div>
           </label>
         </div>
       </div>
