--- a/index.html
+++ b/index.html
@@ -474,30 +474,39 @@
           </ul>
         </div>
 
-        <!-- Subscribe -->
+        <!-- SUBSCRIBE -->
         <div class="footer-form">
-          <span class="subsribe-text">Subscribe</span>
-          <label for="footer-email">
-            <!-- =======  =========-->
-            <input type="email" name="footer-email" class="footer-input" />
+          <p class="footer-text">Subscribe</p>
+          <form class="footer-form">
+            <label for="footer-input" name="footer-input-wrap">
+              <input class="footer-input" type="email" placeholder="E-mail" />
+            </label>
+          </form>
+        </div>
 
-            <!-- BUTTON type="button" -->
-            <!-- <button type="button" class="subscribe-button">
+        <!-- SUBSCRIBE -->
+        <!-- <div class="footer-form">
+          <span class="subsribe-text">Subscribe</span> -->
+
+        <!-- ======= INPUT =========-->
+        <!-- <input type="email" name="footer-input" class="footer-input" /> -->
+
+        <!-- BUTTON type="button" -->
+        <!-- <button type="button" class="subscribe-button">
               <svg class="icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
               <span class="subsribe-text">Subscribe</span>
             </button> -->
 
-            <!-- div (rectangle) -->
-            <div class="subscribe-button">
+        <!-- div (rectangle) -->
+        <!-- <div class="subscribe-button">
               <span class="subsribe-text">Subscribe</span>
               <svg class="icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
-            </div>
-          </label>
-        </div>
+            </div> -->
+        <!-- </div> -->
       </div>
     </footer>
 
