--- a/index.html
+++ b/index.html
@@ -478,9 +478,12 @@
         <div class="footer-form">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-input" name="footer-input-wrap">
+            <label for="footer-input" name="footer-label" class="footer-label">
               <input class="footer-input" type="email" placeholder="E-mail" />
             </label>
+            <button type="submit" name="footer-btn" class="footer-btn">
+              Subscribe
+            </button>
           </form>
         </div>
 
