--- a/index.html
+++ b/index.html
@@ -479,7 +479,12 @@
           <p class="footer-text">Subscribe</p>
           <form class="footer-form">
             <label for="footer-input" name="footer-label" class="footer-label">
-              <input class="footer-input" type="email" placeholder="E-mail" />
+              <input
+                class="footer-input"
+                type="email"
+                name="footer-input"
+                placeholder="E-mail"
+              />
             </label>
             <button type="submit" name="footer-btn" class="footer-btn">
               Subscribe
