--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           </form>
         </div>
 
-        <!-- SUBSCRIBE -->
+        <!-- SUBSCRIBE zero -->
         <!-- <div class="footer-form">
           <span class="subsribe-text">Subscribe</span> -->
 
