--- a/index.html
+++ b/index.html
@@ -488,6 +488,9 @@
             </label>
             <button type="submit" name="footer-btn" class="footer-btn">
               Subscribe
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
             </button>
           </form>
         </div>
