--- a/index.html
+++ b/index.html
@@ -524,10 +524,11 @@
     <!-- Modal window with backdrop -->
     <div class="backdrop">
       <div class="modal"></div>
-      <!-- <button class="modal-close" type="button">X</button> -->
-      <svg class="icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-close"></use>
-      </svg>
+      <button class="modal-close" type="button">
+        <svg class="icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
       <p class="modal-title title">
         Leave your contacts and we well call you back
       </p>
