--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
     <!-- Modal window with backdrop -->
     <div class="backdrop">
       <div class="modal"></div>
-      <button class="modal-close" type="button">
-        <svg class="icon" width="24" height="24">
+      <button class="modal-close-btn" type="button">
+        <svg class="icon">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
