--- a/index.html
+++ b/index.html
@@ -523,76 +523,77 @@
 
     <!-- Modal window with backdrop -->
     <div class="backdrop">
-      <div class="modal"></div>
-      <button class="modal-close-btn" type="button">
-        <svg class="icon">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-      </button>
-      <p class="modal-title title">
-        Leave your contacts and we well call you back
-      </p>
-      <form class="modal-form">
-        <div class="modal-field">
-          <!-- user -->
-          <label for="user-name" class="modal-label">Name</label>
-          <div class="modal-input-wrap">
-            <input
-              type="text"
-              name="user-email"
-              class="modal-input"
-              id="user-email"
-              required
-            />
-            <svg class="modal-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-user"></use>
-            </svg>
-          </div>
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="icon">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title title">
+          Leave your contacts and we well call you back
+        </p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <!-- user -->
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-email"
+                class="modal-input"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
 
-          <!-- phone -->
-          <label for="user-phone" class="modal-label">Phone</label>
-          <div class="modal-input-wrap">
-            <input
-              type="tel"
-              title="+380 (96) 111-11-11"
-              value="+380"
-              name="user-email"
-              class="modal-input"
-              id="user-phone"
-              required
-            />
-            <svg class="modal-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
+            <!-- phone -->
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                title="+380 (96) 111-11-11"
+                value="+380"
+                name="user-email"
+                class="modal-input"
+                id="user-phone"
+                required
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
 
-          <!-- email -->
-          <label class="modal-label" for="user-email">Email</label>
-          <div class="modal-input-wrap">
-            <input
-              type="email"
-              name="user-email"
-              class="modal-input"
-              id="user-email"
-              required
-            />
-            <svg class="modal-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
+            <!-- email -->
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
 
-          <!-- comment -->
-          <label class="modal-label" for="user-email">User comment</label>
-          <div class="modal-input-wrap">
-            <textarea
-              name="user-comment"
-              class="modal-input"
-              id="user-comment"
-              placeholder="Text input"
-            ></textarea>
+            <!-- comment -->
+            <label class="modal-label" for="user-email">User comment</label>
+            <div class="modal-input-wrap">
+              <textarea
+                name="user-comment"
+                class="modal-input"
+                id="user-comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </body>
 </html>
