--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg class="icon">
+          <svg class="icon icon-modal" width="24" height="24">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
