--- a/index.html
+++ b/index.html
@@ -539,12 +539,12 @@
             <div class="modal-input-wrap">
               <input
                 type="text"
-                name="user-email"
+                name="user-name"
                 class="modal-input"
-                id="user-email"
+                id="user-name"
                 required
               />
-              <svg class="modal-icon" width="24" height="24">
+              <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
