--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         </div>
 
         <!-- SUBSCRIBE -->
-        <div class="footer-form">
+        <div class="footer-form-wrap">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form">
             <label for="footer-input" name="footer-label" class="footer-label">
