--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
               <a class="modal-checkbox-link" href="">Privacy Policy</a></label
             >
           </div>
-          <button class="modal-submit-btn" type="submit"></button>
+          <button class="modal-submit-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
