modal-icon-close

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg class="icon icon-modal" width="8" height="8">
+          <svg class="icon modal-icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
