--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             <div class="modal-input-wrap">
               <input
                 type="text"
-                name="user-email"
+                name="user-phone"
                 class="modal-input"
                 id="user-phone"
                 required
