--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 id="user-phone"
                 required
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -553,7 +553,7 @@
                 id="user-email"
                 required
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
