user-privacy visually-hidden

--- a/index.html
+++ b/index.html
@@ -570,9 +570,9 @@
             ></textarea>
           </div>
           <!-- checkbox -->
-          <div class="modal-checkbox visually-hidden">
+          <div class="modal-checkbox">
             <input
-              class="user-privacy"
+              class="user-privacy visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
