modal-field-comment

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             </div>
           </div>
           <!-- comment -->
-          <div class="modal-field">
+          <div class="modal-field modal-field-comment">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               name="user-comment"
