h482 footer-email-input

--- a/index.html
+++ b/index.html
@@ -478,11 +478,15 @@
         <div class="footer-form-wrap">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-input" name="footer-label" class="footer-label">
+            <label
+              for="footer-email-input"
+              name="footer-email-label"
+              class="footer-label"
+            >
               <input
                 class="footer-input"
                 type="email"
-                name="footer-input"
+                name="footer-email-input"
                 placeholder="E-mail"
               />
             </label>
