--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
             <label class="modal-label modal-label-checkbox" for="user-privacy"
               ><span class="span-checkbox"
                 ><svg class="modal-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-close"></use></svg></span
+                  <use href="./images/icons.svg#icon-checked"></use></svg></span
               >I accept the terms and conditions of the
               <a class="modal-checkbox-link" href="">Privacy Policy</a></label
             >
