not valid: name="footer-email-input"

--- a/index.html
+++ b/index.html
@@ -478,17 +478,10 @@
         <div class="footer-form-wrap">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form">
-            <label
-              for="footer-email-input"
-              name="footer-email-label"
-              class="footer-label"
-            >
-              <input
-                class="footer-input"
-                type="email"
-                name="footer-email-input"
-                placeholder="E-mail"
-              />
+            <!--label name="footer-email-label" -->
+            <label for="footer-email-input" class="footer-label">
+              <!-- input name="footer-email-input" -->
+              <input class="footer-input" type="email" placeholder="E-mail" />
             </label>
             <button type="submit" name="footer-btn" class="footer-btn">
               Subscribe
