--- a/index.html
+++ b/index.html
@@ -481,7 +481,12 @@
             <!--label name="footer-email-label" -->
             <label for="footer-email-input" class="footer-label">
               <!-- input name="footer-email-input" -->
-              <input class="footer-input" type="email" placeholder="E-mail" />
+              <input
+                name="footer-email-input"
+                class="footer-input"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
             <button type="submit" name="footer-btn" class="footer-btn">
               Subscribe
