footer-email-input

--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
                 class="footer-input"
                 type="email"
                 placeholder="E-mail"
+                id="footer-email-input"
               />
             </label>
             <button type="submit" name="footer-btn" class="footer-btn">
